# nba-data-fetcher

./: .cursorrules  .gitignore  .gitmessage  CONTRIBUTING.md  LICENSE  README.md  commit_msg.txt  pyproject.toml  requirements.txt
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
src/data/analysis/: prop_analysis_20250208_221824.json  prop_analysis_20250208_221956.json  prop_analysis_20250208_223308.json  prop_analysis_20250208_223338.json  prop_analysis_20250208_223505.json  prop_analysis_20250208_223746.json  prop_analysis_20250208_224605.json  prop_analysis_20250208_224818.json  prop_analysis_20250208_225505.json  prop_analysis_20250208_225623.json  prop_analysis_20250208_225916.json  prop_analysis_20250208_230754.json  prop_analysis_20250208_231030.json  prop_analysis_20250208_231122.json
src/data/cleaned/: nba_player_stats_cleaned_20250208.csv
src/docs/: data_cleaning_validation_steps.md  maintenance_guide.md  model_performance.md  next_steps.md  technical_docs.md  user_guide.md
src/scripts/: __init__.py  run_odds_analysis.py  run_pipeline.py  run_prop_analysis.py
src/scripts/analysis/: prop_analyzer.py
src/scripts/data_collection/: nba_historical_stats_fetcher.py
src/scripts/modeling/: __init__.py  custom_models.py  train_and_save_models.py  train_models.py
src/scripts/odds/: __init__.py  odds_api.py
src/scripts/preprocessing/: clean_raw_data.py  feature_engineering.py
src/scripts/visualization/: feature_importance.py  model_metrics.py  model_visualizations.py
